--- a/index.html
+++ b/index.html
@@ -22,15 +22,13 @@
         <![endif]-->
 
         <div id="panel">
-          <button id="HV">Horizontal/Vertical</button><span id="nombre"></span>
+          <button id="init">&#10026;</button>
+          <button id="toggle_orientation">&#8635;</button>
+          <button id="toggle_value">&#9746;</button>
+          <span id="x">0</span>
         </div>
-        <div id="wrapper">
-          <div id="boulier"></div>
-        </div>
-
-
-
-
+        
+        <div id="wrapper"></div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
