--- a/index.html
+++ b/index.html
@@ -20,15 +20,8 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
-        <div id="panel">
-          <button id="init">&#10026;</button>
-          <button id="toggle_orientation">&#8635;</button>
-          <button id="toggle_value">&#9746;</button>
-          <span id="x">0</span>
-        </div>
         
-        <div id="wrapper"></div>
+       <div id="wrappers"></div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
